gateway/kong/omada-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada
  namespace: omada
  labels:
    app: omada-controller
  annotations:
    konghq.com/protocols: https # Redirect always to https
    konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  hostnames:
    - "omada.home.example.com"
  rules:
    - matches:
      backendRefs:
        # - name: omada-controller
        #   kind: Service
        #   port: 8088
        - name: omada-controller
          kind: Service
          port: 8043
