gateway/kong/pihole-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    konghq.com/protocols: https # Redirect always to https
    konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  hostnames:
    - "pihole.home.example.com"
  rules:
    - matches:
      backendRefs:
        - name: pihole
          kind: Service
          port: 80
